package com.hms.repository;

/**
 * Contract for all entities with a unique alphanumeric identifier.
 */
public interface Identifiable {
    String getId();
}
